[gd_scene load_steps=4 format=3 uid="uid://db8u2wphdpky5"]

[ext_resource type="Script" path="res://scripts/gaping_maw.gd" id="1_fadht"]
[ext_resource type="Texture2D" uid="uid://3retad5lvk4v" path="res://assets/enemies/gaping_maw.webp" id="1_kbnyf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pd50q"]
radius = 24.0832

[node name="GapingMaw" type="StaticBody2D"]
collision_layer = 16
collision_mask = 57
script = ExtResource("1_fadht")

[node name="GMSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_kbnyf")

[node name="GMCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pd50q")

[node name="GMShotCooldown" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="GMPatternTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="GMShotCooldown" to="." method="_on_shot_ready"]
[connection signal="timeout" from="GMPatternTimer" to="." method="_on_pattern_timeout"]
